@@ -123,15 +123,81 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.nau_yyf.ArmoredAssaultApplication</mainClass>
-                    <launcher>tanklauncher</launcher>
-                    <jlinkImageName>tankbattle</jlinkImageName>
-                    <jlinkZipName>tankbattlezip</jlinkZipName>
-                    <noManPages>true</noManPages>
-                    <stripDebug>true</stripDebug>
-                    <noHeaderFiles>true</noHeaderFiles>
                 </configuration>
             </plugin>
             
+            <plugin>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <version>1.4.0</version>
+                <configuration>
+                    <name>ArmoredAssault</name>
+                    <appVersion>1.0</appVersion>
+                    <vendor>NAU-YYF</vendor>
+                    <destination>target/dist</destination>
+                    <mainClass>com.nau_yyf.ArmoredAssaultApplication</mainClass>
+                    <type>${pkg.type}</type>
+                    <icon>${icon.path}</icon>
+                    
+                    <javaOptions>
+                        <option>-Dfile.encoding=UTF-8</option>
+                        <option>--add-opens=java.base/java.lang=ALL-UNNAMED</option>
+                        <option>--add-opens=java.desktop/java.awt.font=ALL-UNNAMED</option>
+                        <option>${pkg.jvmArgs}</option>
+                    </javaOptions>
+                    
+                    <input>${project.build.directory}/dependency</input>
+                    <mainJar>${project.artifactId}-${project.version}.jar</mainJar>
+                    <runtimeImage>${java.home}</runtimeImage>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/dependency</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.1</version>
+                <executions>
+                    <execution>
+                        <id>copy-jar</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/dependency</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${project.build.directory}</directory>
+                                    <includes>
+                                        <include>${project.artifactId}-${project.version}.jar</include>
+                                    </includes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -143,6 +209,19 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <minimizeJar>true</minimizeJar>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                        <exclude>META-INF/MANIFEST.MF</exclude>
+                                        <exclude>module-info.class</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.nau_yyf.ArmoredAssaultApplication</mainClass>
@@ -154,43 +233,78 @@
             </plugin>
 
             <plugin>
-                <groupId>org.panteleyev</groupId>
-                <artifactId>jpackage-maven-plugin</artifactId>
-                <version>1.4.0</version>
-                <configuration>
-                    <name>ArmoredAssault</name>
-                    <appVersion>1.0.0</appVersion>
-                    <vendor>NAU-YYF</vendor>
-                    <destination>target/dist</destination>
-                    <mainClass>com.nau_yyf.ArmoredAssaultApplication</mainClass>
-                    <javaOptions>
-                        <option>-Dfile.encoding=UTF-8</option>
-                        <option>-Dapple.awt.application.name=ArmoredAssault</option>
-                        <option>-Dapple.laf.useScreenMenuBar=true</option>
-                    </javaOptions>
-                    <icon>src/main/resources/images/logo/tank_logo.icns</icon>
-                    <winIcon>src/main/resources/images/ui/app_icon.ico</winIcon>
-                    <linuxIcon>src/main/resources/images/ui/app_icon.png</linuxIcon>
-                    <winDirChooser>true</winDirChooser>
-                    <winMenu>true</winMenu>
-                    <winMenuGroup>ArmoredAssault</winMenuGroup>
-                    <winShortcut>true</winShortcut>
-                    <macPackageIdentifier>com.nau-yyf.ArmoredAssault</macPackageIdentifier>
-                    <macPackageName>ArmoredAssault</macPackageName>
-                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jlink-plugin</artifactId>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
-                        <id>mac</id>
-                        <configuration>
-                            <platformPackageType>dmg</platformPackageType>
-                        </configuration>
+                        <id>create-runtime</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>jpackage</goal>
+                            <goal>jlink</goal>
                         </goals>
+                        <configuration>
+                            <modulePaths>
+                                <modulePath>${java.home}/jmods</modulePath>
+                                <modulePath>/Users/auroral/javafx-sdk/javafx-sdk-21/lib</modulePath>
+                            </modulePaths>
+                            <addModules>
+                                <addModule>java.base</addModule>
+                                <addModule>java.desktop</addModule>
+                                <addModule>javafx.controls</addModule>
+                                <addModule>javafx.fxml</addModule>
+                                <addModule>javafx.media</addModule>
+                                <addModule>javafx.graphics</addModule>
+                                <addModule>javafx.base</addModule>
+                            </addModules>
+                            <outputDirectory>${project.build.directory}/custom-runtime</outputDirectory>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>mac</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <properties>
+                <pkg.type>dmg</pkg.type>
+                <pkg.jvmArgs>-Dglass.platform=mac</pkg.jvmArgs>
+                <icon.path>src/main/resources/images/logo/tank_logo.icns</icon.path>
+            </properties>
+        </profile>
+        <profile>
+            <id>windows</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <properties>
+                <pkg.type>msi</pkg.type>
+                <pkg.jvmArgs></pkg.jvmArgs>
+                <icon.path>src/main/resources/images/logo/tank_logo.ico</icon.path>
+            </properties>
+        </profile>
+        <profile>
+            <id>linux</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>Linux</name>
+                </os>
+            </activation>
+            <properties>
+                <pkg.type>deb</pkg.type>
+                <pkg.jvmArgs>-Dglass.platform=gtk</pkg.jvmArgs>
+                <icon.path>src/main/resources/images/logo/tank_logo.png</icon.path>
+            </properties>
+        </profile>
+    </profiles>
 </project>
